vaultwarden-masterless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden-masterless
  labels:
    goldilocks.fairwinds.com/enabled: "true"
