vaultwarden-masterless/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: masterless
  namespace: vaultwarden-masterless
spec:
  hosts:
    - vw2.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: masterless
            port:
              number: 8484
      timeout: 300s
